--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -14,6 +14,10 @@
     </div>
 
     <div>
+        <a href='/rango/add_category/'>Add a New Category</a><br />
+    </div>
+
+    <div>
         <h2>Most Liked Categories</h2>
         {% if categories %}
         <ul>
