--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -5,6 +5,20 @@
 
 <head>
     <title>Rango</title>
+    <style>
+        html * {
+            font-family: "Courier New", monospace;
+            color: white;
+            background-color: thistle;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </head>
 
 <body>
