--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -4,6 +4,34 @@
 
 <head>
     <title>Rango</title>
+    <style>
+        html * {
+            font-family: "Courier New", monospace;
+            color: white;
+            background-color: thistle;
+        }
+
+        img {
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            padding: 5px;
+            width: 400px;
+            margin-bottom: 10px;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .image-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    </style>
 </head>
 
 <body>
@@ -43,9 +71,13 @@
             {% endif %}
         </div>
 
-        <div>
+        <div class="image-container">
             <a href="/rango/about/">About Rango</a><br />
             <img src="{% static 'images/rango.jpg' %}" alt="Picture of the Love of My Life" />
+            <img src="{% static 'images/MyImage2.jpg' %}" alt="Another Picture of the Love of My Life" />
+            <img src="{% static 'images/MyImage3.jpg' %}" alt="Another Picture of the Love of My Life" />
+            <img src="{% static 'images/MyImage4.jpg' %}" alt="Another Picture of the Love of My Life" />
+            <img src="{% static 'images/MyImage5.jpg' %}" alt="Another Picture of the Love of My Life" />
         </div>
 </body>
 
