--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,38 +1,28 @@
-<!DOCTYPE html>
-{% load staticfiles %} <!-- New line -->
+{% extends "rango/base.html" %}
+{% load staticfiles %}
 
-<html>
+{% block title_block %}
+About Rango
+{% endblock %}
 
-<head>
-    <title>Rango</title>
-    <style>
-        html * {
-            font-family: "Courier New", monospace;
-            color: white;
-            background-color: thistle;
-        }
+{% block body_block %}
+<style>
+    img {
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        padding: 5px;
+        width: 400px;
+        margin-bottom: 10px;
+    }
+</style>
+<h1>Rango says...</h1>
+<div>
+    here is the about page! <br />
+    <strong>This tutorial has been put together by Sophia.</strong><br />
+</div>
+<div>
+    <img src="{% static 'images/rango.jpg' %}" alt="Picture of the Love of My Life " /> <!-- New line -->
+    <img src="{{ MEDIA_URL }}images/cat.jpg" alt="Picture of a Cat" /> <!-- Corrected line -->
 
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-    </style>
-</head>
-
-<body>
-    <h1>Rango says...</h1>
-    <div>
-        here is the about page! <br />
-        <strong>This tutorial has been put together by Sophia.</strong><br />
-    </div>
-    <div>
-        <a href="/rango/">Index</a><br />
-        <img src="{% static 'images/rango.jpg' %}" alt="Picture of the Love of My Life " /> <!-- New line -->
-        <img src="{{ MEDIA_URL }}images/cat.jpg" alt="Picture of a Cat" /> <!-- Corrected line -->
-
-    </div>
-</body>
-
-</html>
+</div>
+{% endblock %}
