--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,40 +1,24 @@
-<!DOCTYPE html>
-<html>
+{% extends "rango/base.html" %}
+{% load staticfiles %}
 
-<head>
-    <title>Rango</title>
-    <style>
-        html * {
-            font-family: "Courier New", monospace;
-            color: white;
-            background-color: thistle;
-        }
+{% block title_block %}
+Add a Page
+{% endblock %}
 
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-    </style>
-</head>
-
-<body>
-    <h1>Add a Page</h1>
-    <div>
-        <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
-            {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
-            {{ hidden }}
-            {% endfor %}
-            {% for field in form.visible_fields %}
-            {{ field.errors }}
-            {{ field.help_text }}
-            {{ field }}
-            {% endfor %}
-            <input type="submit" name="submit" value="Create Page" />
-        </form>
-    </div>
-</body>
-
-</html>
+{% block body_block %}
+<h1>Add a Page</h1>
+<div>
+    <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
+        {% csrf_token %}
+        {% for hidden in form.hidden_fields %}
+        {{ hidden }}
+        {% endfor %}
+        {% for field in form.visible_fields %}
+        {{ field.errors }}
+        {{ field.help_text }}
+        {{ field }}
+        {% endfor %}
+        <input type="submit" name="submit" value="Create Page" />
+    </form>
+</div>
+{% endblock %}
