--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,45 +1,29 @@
-<!DOCTYPE html>
-<html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<head>
-    <title>Rango</title>
-    <style>
-        html * {
-            font-family: "Courier New", monospace;
-            color: white;
-            background-color: thistle;
-        }
+{% block title_block %}
+{% if category %}
+{{ category.name }}
+{% else %}
+Unknown Category
+{% endif %}
+{% endblock %}
 
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-    </style>
-</head>
+{% block body_block %}
+{% if category %}
+<h1>{{ category.name }}</h1>
+{% if pages %}
+<ul>
+    {% for page in pages %}
+    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+    {% endfor %}
+</ul>
+{% else %}
+<strong>No pages currently in category.</strong>
+{% endif %}
 
-<body>
-    <div>
-        {% if category %}
-        <h1>{{ category.name }}</h1>
-        {% if pages %}
-        <ul>
-            {% for page in pages %}
-            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-            {% endfor %}
-        </ul>
-        {% else %}
-        <strong>No pages currently in category.</strong><br />
-        {% endif %}
-        <a href='/rango/category/{{ category.slug }}/add_page/'>Add Page</a><br />
-
-        {% else %}
-        The specified category does not exist.
-        {% endif %}
-
-        <a href="{% url 'index' %}">Back to Index</a><br />
-    </div>
-</body>
-
-</html>
+<a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br />
+{% else %}
+The specified category does not exist.
+{% endif %}
+{% endblock %}
