--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,84 +1,67 @@
-<!DOCTYPE html>
-{% load staticfiles %} <!-- New line -->
-<html>
+{% extends "rango/base.html" %}
+{% load staticfiles %}
 
-<head>
-    <title>Rango</title>
-    <style>
-        html * {
-            font-family: "Courier New", monospace;
-            color: white;
-            background-color: thistle;
-        }
+{% block title_block %}
+Homepage
+{% endblock %}
 
-        img {
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            padding: 5px;
-            width: 400px;
-            margin-bottom: 10px;
-        }
 
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
+{% block body_block %}
 
-        .image-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-    </style>
-</head>
+<style>
+    img {
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        padding: 5px;
+        width: 400px;
+        margin-bottom: 10px;
+    }
+</style>
 
-<body>
-    <h1>Rango says...</h1>
+<h1>Rango says...</h1>
+<div>
+    hey there partner! <br />
+    <strong>{{ boldmessage }}</strong><br />
+</div>
+
+
+<div>
+    <h2>Most Liked Categories</h2>
+    {% if categories %}
+    <ul>
+        {% for category in categories %}
+        <li>
+            <a href="{% url 'rango:show_category' category.slug %}">
+                {{ category.name }}
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
+    {% else %}
+    <strong>There are no categories present.</strong>
+    {% endif %}
+</div>
+<div>
+    <h2>Most Viewed Pages</h2>
     <div>
-        hey there partner! <br />
-        <strong>{{ boldmessage }}</strong><br />
-    </div>
-
-    <div>
-        <a href='/rango/add_category/'>Add a New Category</a><br />
-    </div>
-
-    <div>
-        <h2>Most Liked Categories</h2>
-        {% if categories %}
+        {% if pages %}
         <ul>
-            {% for category in categories %}
-            <li><a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a></li>
+            {% for page in pages %}
+            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
             {% endfor %}
         </ul>
         {% else %}
-        <strong>There are no categories present.</strong>
+        <strong>There are no pages present.</strong>
         {% endif %}
     </div>
-    <div>
-        <h2>Most Viewed Pages</h2>
-        <div>
-            {% if pages %}
-            <ul>
-                {% for page in pages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                {% endfor %}
-            </ul>
-            {% else %}
-            <strong>There are no pages present.</strong>
-            {% endif %}
-        </div>
 
-        <div class="image-container">
-            <a href="/rango/about/">About Rango</a><br />
-            <img src="{% static 'images/rango.jpg' %}" alt="Picture of the Love of My Life" />
-            <img src="{% static 'images/MyImage2.jpg' %}" alt="Another Picture of the Love of My Life" />
-            <img src="{% static 'images/MyImage3.jpg' %}" alt="Another Picture of the Love of My Life" />
-            <img src="{% static 'images/MyImage4.jpg' %}" alt="Another Picture of the Love of My Life" />
-            <img src="{% static 'images/MyImage5.jpg' %}" alt="Another Picture of the Love of My Life" />
-        </div>
-</body>
+    <div class="image-container">
 
-</html>
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of the Love of My Life" />
+        <img src="{% static 'images/MyImage2.jpg' %}" alt="Another Picture of the Love of My Life" />
+        <img src="{% static 'images/MyImage3.jpg' %}" alt="Another Picture of the Love of My Life" />
+        <img src="{% static 'images/MyImage4.jpg' %}" alt="Another Picture of the Love of My Life" />
+        <img src="{% static 'images/MyImage5.jpg' %}" alt="Another Picture of the Love of My Life" />
+    </div>
+
+    {% endblock %}
