--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -22,7 +22,7 @@ About Rango
 </div>
 <div>
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of the Love of My Life " /> <!-- New line -->
-    <img src="{{ MEDIA_URL }}images/cat.jpg" alt="Picture of a Cat" /> <!-- Corrected line -->
+    <img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a Cat" /> <!-- Corrected line -->
 
 </div>
 {% endblock %}
