--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 {% load staticfiles %}
 
+{% load rango_template_tags %}
+
 <html>
 
 <head>
@@ -16,19 +18,17 @@
             color: white;
             background-color: thistle;
         }
-
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
     </style>
 </head>
 
 <body>
     <div>
         {% block body_block %}
+        {% endblock %}
+    </div>
+    <div>
+        {% block sidebar_block %}
+        {% get_category_list %}
         {% endblock %}
     </div>
     <hr />
