--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -31,6 +31,7 @@ Homepage
 
 <div>
     <h2>Most Liked Categories</h2>
+    <p>Visits: {{ visits }}</p>
     {% if categories %}
     <ul>
         {% for category in categories %}
