end of chapter 10 commit

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -16,6 +16,7 @@ About Rango
     }
 </style>
 <h1>Rango says...</h1>
+<p>Visits: {{ visits }}</p>
 <div>
     here is the about page! <br />
     <strong>This tutorial has been put together by Sophia.</strong><br />
